2017-05-19 Michele Pinamonti <michele.pinamonti@gmail.com>
    * Fixing bin blinding visualisation and add possibility to keep pre-fit blinding in post -fit (fixes TTHFITTER-123)
    
2017-05-18 Michele Pinamonti <michele.pinamonti@gmail.com>
    * Changing histo creation procedure: root files created before creating histogrmas (closes TTHFITTER-121)
    * fixing crash on yield table creatio (closes TTHFITTER-118)
    * fixing warnings in significance and limit with signal injection (significance affects log files - had to be re-created)
    * fixing problem with validation regions and multi-fit (fixes TTHFITTER-122)
    * adding script hupdate (closes TTHFITTER-119)
    
2017-05-17 Michele Pinamonti <michele.pinamonti@gmail.com>
    * Added SaveSuffix option (working on TTHFITTER-122)
    
2017-04-11 Michele Pinamonti <michele.pinamonti@gmail.com>
    * Fixing crash when producing SystDataPlots
    * Fixing ranges of normalisation factor and gamma plots 
    * adding combined significance
    
2017-03-20 Michele Pinamonti <michele.pinamonti@gmail.com>
    * Tagging: TtHFitter-00-03-07
    
2017-03-13 Michele Pinamonti <michele.pinamonti@gmail.com>
    * Fixing decorrelation by sample and ghost samples. Closes TTHFITTER-107
    * Fixing large stat err for zero content. Closes TTHFITTER-105
    * Fixing StatOnly flag (closes TTHFITTER-102):
       * if StatOnly set to TRUE, no gammas anywhere
       * need to be done before workspace creation in order to work with the limit / significance (l, s)
       * can be done from command line
       * does not need to re-create ws in case of fit (f)

2017-03-09 Michele Pinamonti <michele.pinamonti@gmail.com>
    * IMPORTANT: Binned likelihood option added, which might fix fit instabilities (thanks Daiki)
    * Adding small options: no ratio plot (thanks Robert Wolff) and others
    
2017-02-28 Michele Pinamonti <michele.pinamonti@gmail.com>
    * various merge requests + few small cosmetics
    